--- a/packages/flutter_whisper_kit/pubspec.yaml
+++ b/packages/flutter_whisper_kit/pubspec.yaml
@@ -3,6 +3,7 @@ description: "A Flutter plugin for on-device speech recognition and transcriptio
 version: 0.3.0
 repository: https://github.com/r0227n/flutter_whisper_kit/tree/main/packages/flutter_whisper_kit
 issue_tracker: https://github.com/r0227n/flutter_whisper_kit/issues
+publish_to: none
 
 environment:
   sdk: ">=3.9.0 <4.0.0"
@@ -13,7 +14,8 @@ resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  flutter_whisper_kit_apple: ^0.3.0
+  flutter_whisper_kit_apple:
+    path: ../flutter_whisper_kit_apple
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
