--- a/packages/flutter_whisper_kit_web/pubspec.yaml
+++ b/packages/flutter_whisper_kit_web/pubspec.yaml
@@ -1,8 +1,10 @@
 name: flutter_whisper_kit_web
-description: "Web implementation of the flutter_whisper_kit plugin, providing speech recognition and transcription capabilities using web APIs."
+description: "Web implementation of the flutter_whisper_kit plugin, providing
+  speech recognition and transcription capabilities using web APIs."
 version: 0.3.0
 repository: https://github.com/r0227n/flutter_whisper_kit/tree/main/packages/flutter_whisper_kit_web
 issue_tracker: https://github.com/r0227n/flutter_whisper_kit/issues
+publish_to: none
 
 environment:
   sdk: ">=3.9.0 <4.0.0"
@@ -15,7 +17,7 @@ dependencies:
     sdk: flutter
   flutter_whisper_kit:
     path: ../flutter_whisper_kit
-  http: ^1.2.0
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
@@ -28,3 +30,5 @@ flutter:
       web:
         pluginClass: FlutterWhisperKitWebPlugin
         fileName: flutter_whisper_kit_web.dart
+  assets:
+    - assets/flutter_whisper_kit_web.js
